# aifaq

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  litestream.yml  pyproject.toml  requirements.txt  setup-host.sh
deploy/: cloudflared.config.snippet  status-compose.service
scripts/: announce.sh  backup.sh  restore.sh
src/status_service/: admin_auth.py  aggregator.py  alerter.py  config.py  db.py  main.py  ratelimit.py  reset_monitoring.py  scheduler.py  subscribers.py
src/status_service/probes/: __init__.py  discord.py  dns.py  http.py  proxy.py  ssl.py
src/status_service/routes/: admin.py  admin_ui.py  api.py  badge.py  feed.py  subscribe.py  ui.py
src/status_service/static/: status.css  status.js
src/status_service/templates/: _banner.html  admin.html  admin_setup.html  base.html  history.html  status.html
tests/: conftest.py  test_admin.py  test_admin_ui.py  test_aggregator.py  test_alerter.py  test_api.py  test_badge.py  test_features.py  test_feed.py  test_incident_cause.py  test_maintenance.py  test_probes.py
