[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "status_service"
version = "1.0.0"
description = "MMO Maid external status page — probes mmomaid.cloud from outside, hosts a public status site."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "httpx==0.27.2",
  "jinja2==3.1.4",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "slowapi==0.1.9",
  "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
  "freezegun==1.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
